Mon Sep 20 11:54:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/IDL_Test/interface.idl:
          Fuzz (trailing space).

Mon Sep 20 11:42:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
          Don't generate typedef of the context, not needed at all

Mon Sep 20 10:46:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          AMI4CCM doesn't need to access container/context internals

Mon Sep 20 09:32:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3042_Regression/test.idl:
        * tests/DII_Collocation_Tests/twoway/Test.idl:
        * tests/IDL_Test/IDL_Test.mpc:
        * tests/IDL_Test/interface.idl:
        * tests/IDL_Test/old_array.idl:
        * tests/IDL_Test/old_sequence.idl:
        * tests/IDL_Test/old_struct.idl:
          Rewritten anonymous types since anonymous types are not allowed.

Mon Sep 20 08:54:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
          Use new methods on the context to get the POA

        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadManager.h:
          Fixed typo

Mon Sep 20 03:05:29 UTC 2010  Scott Harris  <harris_s@ociweb.com>

        * tao/String_Manager_T.h:

          Reverted previous change because it caused ambiguous overloads
          in code that compared String_Manager == 0.

Sat Sep 18 22:38:22 UTC 2010  Scott Harris  <harris_s@ociweb.com>

        * tao/String_Manager_T.h:

          Added equality operators per Bugzilla #3844.

Fri Sep 17 22:15:54 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/Codeset/Codeset.mpc:
        * tao/Strategies/Strategies.mpc:
        * tao/Valuetype/Valuetype.mpc:

          Restoring "make install" functionality (installing all needed
          headers, inline files, and template files) which was lost when these