@@ -1,3 +1,10 @@
+Mon Sep 20 13:19:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
+        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
+          Updated includes and for the fact that we now talk about SessionContext
+
 Mon Sep 20 11:54:13 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * tests/IDL_Test/interface.idl:
